--- a/23-HTML/aboutme.html
+++ b/23-HTML/aboutme.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a id="about" href="/">Urso Marrom</a>
+      <a id="about" href="index.html">Urso Marrom</a>
       <a id="brown-bear" href="aboutme.html">Sobre Mim</a>
     </nav>
 
