--- a/31-HTML/index.html
+++ b/31-HTML/index.html
@@ -6,7 +6,7 @@
   <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-
+  
   <ul class="navigation">
     <li><img src="https://content.codecademy.com/courses/web-101/unit-9/htmlcss1-img_logo-shiptoit.png" height="20px;"></li>
     <li class="active">Lista de Ação</li>
@@ -57,6 +57,45 @@
       </tr>
       </tbody>
   </table>
+
+  <table>
+    <tr>
+      <th scope="">Nome da Empresa</th>
+      <th scope="" colspan="2">Número de itens para Envio</th>
+      
+    </tr>
+    <tr>
+      <td>Adam's Greenworks</td>
+      <td rowspan="2">14</td>
+      <td>Empacotar Item</td>
+    </tr>
+    <tr>
+      <td>Davie's Burgers</td>
+      
+      <td>Emitir Nota</td>
+    </tr>
+    <tr>
+      <td>Baker's Bike Shop</td>
+      <td>3</td>
+      <td>Emitir Nota</td>
+    </tr>
+    <tr>
+      <td>Miss Sally's Southern</td>
+      <td>4</td>
+      <td>Enviar</td>
+    </tr>
+    <tr>
+      <td>Summit Resort Rentals</td>
+      <td>4</td>
+      <td>Enviar</td>
+    </tr>
+    <tr>
+      <td>Strike Fitness</td>
+      <td>1</td>
+      <td>Início de Pedido</td>
+    </tr>
+  </table>
+  
 
 </body>
 </html>
