--- a/32-HTML/index.html
+++ b/32-HTML/index.html
@@ -16,7 +16,51 @@
 
   <div class="search">Busca na tabela</div>
 
-
+  <table>
+      <thead>
+        <tr>
+          <th scope="">Nome da Empresa</th>
+          <th scope="" colspan="2">Número de itens para Envio</th>
+        </tr>
+      </thead>
+    <tbody>
+      <tr>
+        <td>Adam's Greenworks</td>
+        <td rowspan="2">14</td>
+        <td>Empacotar Item</td>
+      </tr>
+      <tr>
+        <td>Davie's Burgers</td>
+      
+        <td>Emitir Nota</td>
+      </tr>
+      <tr>
+        <td>Baker's Bike Shop</td>
+        <td>3</td>
+        <td>Emitir Nota</td>
+      </tr>
+      <tr>
+        <td>Miss Sally's Southern</td>
+        <td>4</td>
+        <td>Enviar</td>
+      </tr>
+      <tr>
+        <td>Summit Resort Rentals</td>
+        <td>4</td>
+        <td>Enviar</td>
+      </tr>
+      <tr>
+        <td>Strike Fitness</td>
+        <td>1</td>
+        <td>Início de Pedido</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <td>Total</td>
+      <td>28</td>
+      
+    </tfoot>
+  </table>
 
 </body>
 </html>
