Atividades semana 1 CSS

--- a/CSS/14-CSS/index.html
+++ b/CSS/14-CSS/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>The Rise of Soccer in The US</title>
-  <link href='style.css' rel='stylesheet'>
+  <link rel="stylesheet" href="style.css" media="all">
 </head>
 
 <body>
