--- a/HTML/23-HTML/aboutme.html
+++ b/HTML/23-HTML/aboutme.html
@@ -2,11 +2,12 @@
 
 <html>
   <head>
+      <meta charset="UTF-8">
     <title>Sobre Mim</title>
   </head>
   <body>
     <nav>
-      <a id="about" href="/">Urso Marrom</a>
+      <a id="about" href="index.html">Urso Marrom</a>
       <a id="brown-bear" href="aboutme.html">Sobre Mim</a>
     </nav>
 
