--- a/CSS/31-CSS/index.html
+++ b/CSS/31-CSS/index.html
@@ -23,9 +23,9 @@
       <div class='row secondary-background'>
         <div class='day square'><h3>MON</h3></div>
         <div class='task square'>
-          <p> Insert some information about your week here :) </p>
+          <p></p>
         </div>
-        <div class='task square'></div>
+        <div class='task square'><p></p></div>
         <div class='task square'></div>
       </div>
       <div class='row'>
