--- a/CSS/32-CSS/index.html
+++ b/CSS/32-CSS/index.html
@@ -4,6 +4,71 @@
   <title>The Tea Cozy</title>
   <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
-  <body>
-  </body>
+<body>
+  <header>
+    <img src="resources/img-tea-cozy-logo.png" alt="">
+    <nav>
+      <ul>
+        <li><a href="">Mission</a></li>
+        <li><a href="">Featured Tea</a></li>
+        <li><a href="">Locations</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </section>
+    <section class="tea-of-the-month">
+      <h2>Tea of the Month</h2>
+      <h4>What's Sleeping at The Tea Cozy</h4>
+      <div class="gallery-container">
+        <figure>
+          <img src="resources/img-berryblitz.jpg">
+          <figcaption>Fall Berry Blitz Tea</figcaption>
+        </figure>
+        <figure>
+          <img src="resources/img-spiced-rum.webp">
+          <figcaption>Spiced Rum Tea</figcaption>
+        </figure>
+        <figure>
+          <img src="resources/img-donut.jpg">
+          <figcaption>Seasonal Donuts</figcaption>
+        </figure>
+        <figure>
+          <img src="resources/img-myrtle-ave.jpg">
+          <figcaption>Myrtle Ave Tea</figcaption>
+        </figure>
+        <figure>
+          <img src="resources/img-bedford-bizarre.jpg">
+          <figcaption>Bedford Bizarre Tea</figcaption>
+        </figure>
+      </div>
+    </section>
+    <section class="locations">
+      <h2>Locations</h2>
+      <div class="container">
+        <h2>Downtown</h2>
+        <span>384 west 4th St</span>
+        <span>Suite 108</span>
+        <span>Portland, Maine</span>
+      </div>
+      <div class="container">
+        <h2>East Bayside</h2>
+        <span>3433 Phisherman's Avenue</span>
+        <span>(Northwest Corner)</span>
+        <span>Portland, Maine</span>
+      </div>
+      <div class="container">
+        <h2>Oakdale</h2>
+        <span>515 Crescent Avenue</span>
+        <span>Second Floor</span>
+        <span>Portland, Maine</span>
+      </div>
+    </section>
+  </main>
+  <footer>
+  </footer>
+</body>
 </html>
