--- a/CSS/32-CSS/index.html
+++ b/CSS/32-CSS/index.html
@@ -48,24 +48,26 @@
     </section>
     <section class="locations">
       <h2>Locations</h2>
-      <div class="container">
-        <h2>Downtown</h2>
-        <span>384 west 4th St</span>
-        <span>Suite 108</span>
-        <span>Portland, Maine</span>
-      </div>
-      <div class="container">
-        <h2>East Bayside</h2>
-        <span>3433 Phisherman's Avenue</span>
-        <span>(Northwest Corner)</span>
-        <span>Portland, Maine</span>
-      </div>
-      <div class="container">
-        <h2>Oakdale</h2>
-        <span>515 Crescent Avenue</span>
-        <span>Second Floor</span>
-        <span>Portland, Maine</span>
-      </div>
+      <cards-container>
+        <div class="card">
+          <h2>Downtown</h2>
+          <span>384 west 4th St</span>
+          <span>Suite 108</span>
+          <span>Portland, Maine</span>
+        </div>
+        <div class="card">
+          <h2>East Bayside</h2>
+          <span>3433 Phisherman's Avenue</span>
+          <span>(Northwest Corner)</span>
+          <span>Portland, Maine</span>
+        </div>
+        <div class="card">
+          <h2>Oakdale</h2>
+          <span>515 Crescent Avenue</span>
+          <span>Second Floor</span>
+          <span>Portland, Maine</span>
+        </div>
+      </cards-container>
     </section>
   </main>
   <footer>
