--- a/CSS/32-CSS/index.html
+++ b/CSS/32-CSS/index.html
@@ -6,71 +6,85 @@
 </head>
 <body>
   <header>
-    <img src="resources/img-tea-cozy-logo.png" alt="">
-    <nav>
-      <ul>
-        <li><a href="">Mission</a></li>
-        <li><a href="">Featured Tea</a></li>
-        <li><a href="">Locations</a></li>
-      </ul>
+    <img class="logo" src="resources/img-tea-cozy-logo.png" alt="">
+    <nav class="action-buttons">
+        <a href="">Mission</a>
+        <a href="">Featured Tea</a>
+        <a href="">Locations</a>
     </nav>
   </header>
   <main>
     <section class="hero">
-      <h2>Our Mission</h2>
-      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      <div class="hero-heading">
+        <h2>Our mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
     </section>
     <section class="tea-of-the-month">
-      <h2>Tea of the Month</h2>
-      <h4>What's Sleeping at The Tea Cozy</h4>
+      <div class="gallery-heading">
+          <h2>Tea of The Month</h2>
+          <h4>What's Sleeping at The Tea Cozy</h4>
+      </div>
       <div class="gallery-container">
-        <figure>
-          <img src="resources/img-berryblitz.jpg">
-          <figcaption>Fall Berry Blitz Tea</figcaption>
+        <figure class="gallery-item">
+          <img src="resources/img-berryblitz.jpg" class="gallery-image">
+          <figcaption><h4>fall berry blitz tea</h4></figcaption>
         </figure>
-        <figure>
-          <img src="resources/img-spiced-rum.webp">
-          <figcaption>Spiced Rum Tea</figcaption>
+        <figure class="gallery-item">
+          <img src="resources/img-spiced-rum.webp" class="gallery-image">
+          <figcaption><h4>spiced rum tea</h4></figcaption>
         </figure>
-        <figure>
-          <img src="resources/img-donut.jpg">
-          <figcaption>Seasonal Donuts</figcaption>
+        <figure class="gallery-item">
+          <img src="resources/img-donut.jpg" class="gallery-image">
+          <figcaption><h4>seasonal donuts</h4></figcaption>
         </figure>
-        <figure>
-          <img src="resources/img-myrtle-ave.jpg">
-          <figcaption>Myrtle Ave Tea</figcaption>
+        <figure class="gallery-item">
+          <img src="resources/img-myrtle-ave.jpg" class="gallery-image">
+          <figcaption><h4>myrtle ave tea</h4></figcaption>
         </figure>
-        <figure>
-          <img src="resources/img-bedford-bizarre.jpg">
-          <figcaption>Bedford Bizarre Tea</figcaption>
+        <figure class="gallery-item">
+          <img src="resources/img-bedford-bizarre.jpg" class="gallery-image">
+          <figcaption><h4>bedford bizarre tea</h4></figcaption>
         </figure>
       </div>
     </section>
     <section class="locations">
-      <h2>Locations</h2>
-      <cards-container>
-        <div class="card">
-          <h2>Downtown</h2>
-          <span>384 west 4th St</span>
-          <span>Suite 108</span>
-          <span>Portland, Maine</span>
+        <!--
+      <div class="locations-heading">
+          <h2>locations</h2>
+      </div>
+        -->
+        <div class="cards-container">
+            <div class="card">
+              <h2>downtown</h2>
+              <p>384 west 4th st</p>
+              <p>suite 108</p>
+              <p>portland, maine</p>
+            </div>
+            <div class="card">
+              <h2>east bayside</h2>
+              <p>3433 phisherman's avenue</p>
+              <p>(northwest corner)</p>
+              <p>portland, maine</p>
+            </div>
+            <div class="card">
+                <h2>oakdale</h2>
+                <p>515 crescent avenue</p>
+                <p>second floor</p>
+                <p>portland, maine</p>
+            </div>
         </div>
-        <div class="card">
-          <h2>East Bayside</h2>
-          <span>3433 Phisherman's Avenue</span>
-          <span>(Northwest Corner)</span>
-          <span>Portland, Maine</span>
-        </div>
-        <div class="card">
-          <h2>Oakdale</h2>
-          <span>515 Crescent Avenue</span>
-          <span>Second Floor</span>
-          <span>Portland, Maine</span>
-        </div>
-      </cards-container>
     </section>
   </main>
   <footer>
+    <section class="contact">
+      <h2>the tea cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </section>
+    <section class="copyright">
+      <p>copyright the tea cozy 2017</p>
+    </section>
   </footer>
 </body>
 </html>
