--- a/CSS/32-CSS/index.html
+++ b/CSS/32-CSS/index.html
@@ -8,19 +8,19 @@
   <header>
     <img class="logo" src="resources/img-tea-cozy-logo.png" alt="">
     <nav class="action-buttons">
-        <a href="">Mission</a>
-        <a href="">Featured Tea</a>
-        <a href="">Locations</a>
+        <a href="#mission">Mission</a>
+        <a href="#featured">Featured Tea</a>
+        <a href="#locations">Locations</a>
     </nav>
   </header>
   <main>
-    <section class="hero">
+    <section id="mission" class="hero">
       <div class="hero-heading">
         <h2>Our mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </section>
-    <section class="tea-of-the-month">
+    <section id="featured"class="featured-tea">
       <div class="gallery-heading">
           <h2>Tea of The Month</h2>
           <h4>What's Sleeping at The Tea Cozy</h4>
@@ -48,14 +48,12 @@
         </figure>
       </div>
     </section>
-    <section class="locations">
-        <!--
+    <section id="locations" class="locations">
       <div class="locations-heading">
           <h2>locations</h2>
       </div>
-        -->
         <div class="cards-container">
-            <div class="card">
+            <div class="card first-card">
               <h2>downtown</h2>
               <p>384 west 4th st</p>
               <p>suite 108</p>
@@ -67,7 +65,7 @@
               <p>(northwest corner)</p>
               <p>portland, maine</p>
             </div>
-            <div class="card">
+            <div class="card last-card">
                 <h2>oakdale</h2>
                 <p>515 crescent avenue</p>
                 <p>second floor</p>
@@ -78,7 +76,7 @@
   </main>
   <footer>
     <section class="contact">
-      <h2>the tea cozy</h2>
+      <h2>The Tea Cozy</h2>
       <h5>contact@theteacozy.com</h5>
       <h5>917-555-8904</h5>
     </section>
