--- a/Instagram/index.html
+++ b/Instagram/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
 <header>
         <nav id="top-bar">
             <div class="nav-container">
-                <span class="nickname">leonsedov</span>
+                <span class="nickname">nomeusuario</span>
                 <i class="fa-solid fa-chevron-down fa-sm"></i>
             </div>
             <div class="nav-container">
@@ -21,9 +21,36 @@
         </nav>
 </header>
 <main>
-    kj
-    
+    <section class="profile">
+        <img src="" alt="" class="perfil round">
+        <div class="story-action-button round"><i class="fa-solid fa-plus"></i></div>
+        <p>Nome do Usuário</p>
+    </section>
+    <section class="follows">
+        <ul>
+            <li>
+                <p><span>125</span>Publicações</p>
+            </li>
+            <li>
+                <p><span>345</span>Seguidores</p>
+            </li>
+            <li>
+                <p><span>351</span>Seguindo</p>
+            </li>
+        </ul>
+    </section>
+    <section class="action-buttons-profile">
+        (div.action-button-profile>p)+(div.action-button-share)
+    </section>
+    <section class="highlights">
 
+    </section>
+    <section class="action-buttons">
+
+    </section>
+    <section class="mural">
+
+    </section>
 </main>
 <footer>
 
