--- a/Instagram/index.html
+++ b/Instagram/index.html
@@ -40,10 +40,18 @@
         </ul>
     </section>
     <section class="action-buttons-profile">
-        (div.action-button-profile>p)+(div.action-button-share)
+        <div class="ab profile-ab">
+            <p>Editar Perfil</p>
+        </div>
+        <div class="ab share-ab">
+            <p>Compartilhar Perfil</p>
+        </div>
+        <div class="ab suggestions-ab">
+            <i class="fa-solid fa-user-plus"></i>
+        </div>
     </section>
     <section class="highlights">
-
+        
     </section>
     <section class="action-buttons">
 
