--- a/Instagram/index.html
+++ b/Instagram/index.html
@@ -11,7 +11,7 @@
 <header>
         <nav id="top-bar">
             <div class="nav-container">
-                <span class="nickname">nomeusuario</span>
+                <span class="username">nomeusuario</span>
                 <i class="fa-solid fa-chevron-down fa-sm"></i>
             </div>
             <div class="nav-container">
@@ -22,7 +22,7 @@
 </header>
 <main>
     <section class="profile">
-        <img src="" alt="" class="perfil round">
+        <img src="" alt="" class="profile round">
         <div class="story-action-button round"><i class="fa-solid fa-plus"></i></div>
         <p>Nome do Usuário</p>
     </section>
@@ -51,17 +51,55 @@
         </div>
     </section>
     <section class="highlights">
-        
+        <div class="highlight-item">
+            <img src="" alt="" class="highlight round">
+            <p>Texto</p>
+        </div>
+        <div class="highlight-item">
+            <img src="" alt="" class="highlight round">
+            <p>Texto</p>
+        </div>
+        <div class="highlight-item">
+            <img src="" alt="" class="highlight round">
+            <p>Texto</p>
+        </div>
+        <div class="highlight-item">
+            <img src="" alt="" class="highlight round">
+            <p>Texto</p>
+        </div>
+        <div class="highlight-item">
+            <img src="" alt="" class="highlight round">
+            <p>Texto</p>
+        </div>
     </section>
     <section class="action-buttons">
-
+        <nav>
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+            <i class="fa-solid fa-plus"></i>
+        </nav>
     </section>
     <section class="mural">
-
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="" alt=""></div>
     </section>
 </main>
 <footer>
-
+    <nav>
+        <i class="fa-solid fa-house"></i>
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-regular fa-square-plus"></i>
+        <i class="fa-solid fa-clapperboard"></i>
+        <i class="fa-solid fa-circle"></i>
+        <img src="" alt="" class="profile round">
+    </nav>
 </footer>
 <script src="https://kit.fontawesome.com/286fab062e.js" crossorigin="anonymous"></script>
 </body>
