--- a/Instagram/index.html
+++ b/Instagram/index.html
@@ -9,35 +9,44 @@
 </head>
 <body>
 <header>
-        <nav id="top-bar">
-            <div class="nav-container">
-                <span class="username">nomeusuario</span>
-                <i class="fa-solid fa-chevron-down fa-sm"></i>
-            </div>
-            <div class="nav-container">
-                <i class="fa-regular fa-square-plus"></i>
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </nav>
+    <nav id="top-bar">
+        <div class="nav-container">
+            <span class="username">nomeusuario</span>
+            <i class="fa-solid fa-chevron-down fa-2xs"></i>
+        </div>
+        <div class="nav-container">
+            <i class="fa-regular fa-square-plus"></i>
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </nav>
 </header>
 <main>
-    <section class="profile">
-        <img src="" alt="" class="profile round">
-        <div class="story-action-button round"><i class="fa-solid fa-plus"></i></div>
-        <p>Nome do Usuário</p>
-    </section>
-    <section class="follows">
-        <ul>
-            <li>
-                <p><span>125</span>Publicações</p>
-            </li>
-            <li>
-                <p><span>345</span>Seguidores</p>
-            </li>
-            <li>
-                <p><span>351</span>Seguindo</p>
-            </li>
-        </ul>
+    <section class="profile-follows">
+        <div class="profile-container">
+            <div class="profile-picture-container">
+                <img src="assets/images/rodrigogoes.jpeg" alt="" class="profile-picture round">
+                <div class="story-action-button round">
+                    <i class="fa-solid fa-plus fa-sm"></i>
+                </div>
+            </div>
+            <p class="username">Nome do Usuário</p>
+        </div>
+        <div class="follows-container">
+            <ul>
+                <li>
+                    <span class="follows-num">345</span>
+                    <p>Publicações</p>
+                </li>
+                <li>
+                    <span class="follows-num">345</span>
+                    <p>Seguidores</p>
+                </li>
+                <li>
+                    <span class="follows-num">345</span>
+                    <p>Seguindo</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="action-buttons-profile">
         <div class="ab profile-ab">
@@ -52,53 +61,52 @@
     </section>
     <section class="highlights">
         <div class="highlight-item">
-            <img src="" alt="" class="highlight round">
+            <img src="assets/images/rodrigogoes.jpeg" alt="" class="highlight round">
             <p>Texto</p>
         </div>
         <div class="highlight-item">
-            <img src="" alt="" class="highlight round">
+            <img src="assets/images/rodrigogoes.jpeg" alt="" class="highlight round">
             <p>Texto</p>
         </div>
         <div class="highlight-item">
-            <img src="" alt="" class="highlight round">
+            <img src="assets/images/rodrigogoes.jpeg" alt="" class="highlight round">
             <p>Texto</p>
         </div>
         <div class="highlight-item">
-            <img src="" alt="" class="highlight round">
+            <img src="assets/images/rodrigogoes.jpeg" alt="" class="highlight round">
             <p>Texto</p>
         </div>
         <div class="highlight-item">
-            <img src="" alt="" class="highlight round">
+            <img src="assets/images/rodrigogoes.jpeg" alt="" class="highlight round">
             <p>Texto</p>
         </div>
     </section>
     <section class="action-buttons">
         <nav>
-            <i class="fa-solid fa-plus"></i>
-            <i class="fa-solid fa-plus"></i>
-            <i class="fa-solid fa-plus"></i>
+            <div class="ab a-buttons"><i class="fa-solid fa-table-cells fa-xl"></i></div>
+            <div class="ab a-buttons"><i class="fa-solid fa-clapperboard fa-xl"></i></div>
+            <div class="ab a-buttons"><i class="fa-solid fa-id-card-clip fa-xl"></i></div>
         </nav>
     </section>
     <section class="mural">
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
-        <div class="mural-item"><img src="" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
+        <div class="mural-item"><img src="assets/images/rodrigogoes.jpeg" alt=""></div>
     </section>
 </main>
 <footer>
     <nav>
-        <i class="fa-solid fa-house"></i>
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-regular fa-square-plus"></i>
-        <i class="fa-solid fa-clapperboard"></i>
-        <i class="fa-solid fa-circle"></i>
-        <img src="" alt="" class="profile round">
+        <i class="fa-solid fa-house fa-xl"></i>
+        <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+        <i class="fa-regular fa-square-plus fa-xl"></i>
+        <i class="fa-solid fa-clapperboard fa-xl"></i>
+        <img src="assets/images/rodrigogoes.jpeg" alt="" class="profile-picture round">
     </nav>
 </footer>
 <script src="https://kit.fontawesome.com/286fab062e.js" crossorigin="anonymous"></script>
