--- a/sitePessoal/index.html
+++ b/sitePessoal/index.html
@@ -8,21 +8,33 @@
 <body>
 <header>
     <nav id="top-bar">
-        <div class="icon-container"><img class="icon" src="assets/images/users.png" alt=""><a href="#sobremim"><span>Sobre mim</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/questionMark.png" alt=""><a href="#curiosidades"><span>Curiosidades</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/book.png" alt=""><a href="#educacao"><span>Educação</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/folderIcon.png" alt=""><a href="#causos"><span>Causos</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/joystick.png" alt=""><a href="#habilidades"><span>Habilidades</span></a></div>
-        <div class="icon-container"><img class="icon" src="assets/images/notepad.png" alt=""><a href="#contato"><span>Contato</span></a></div>
+        <div class="icon-container"><img class="icon" src="assets/images/users-2.png" alt=""><a href="#sobremim"><span>Sobre mim</span></a></div>
+        <div class="icon-container"><img class="icon" src="assets/images/help_question_mark-0.png" alt=""><a href="#curiosidades"><span>Curiosidades</span></a></div>
+        <div class="icon-container"><img class="icon" src="assets/images/address_book-0.png" alt=""><a href="#educacao"><span>Educação</span></a></div>
+        <div class="icon-container"><img class="icon" src="assets/images/directory_open_file_mydocs-5.png" alt=""><a href="#causos"><span>Causos</span></a></div>
+        <div class="icon-container"><img class="icon" src="assets/images/joystick-5.png" alt=""><a href="#habilidades"><span>Habilidades</span></a></div>
+        <div class="icon-container"><img class="icon" src="assets/images/address_book_pad.png" alt=""><a href="#contato"><span>Contato</span></a></div>
     </nav>
 </header>
 <main>
+    <section id="hero">
+        <figure>
+            <img id="winLogo" src="assets/images/win98Logo.png" alt="">
+        </figure>
+        <div class="hero-heading">
+            <h1 id="regular">Pedro</h1><h1>AUGUSTO</h1>
+        </div>
+    </section>
     <section class="window" id="sobremim">
         <div class="window-heading">
             <h2>Sobre mim</h2>
+            <div class="window-icons">
+                <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                <img class="window-icon" src="assets/images/close-icon.png" alt="">
+            </div>
         </div>
         <figure>
-            <img src="images/pedro_selfie.jpg" alt="Imagem do criador dessa maravilhosa página web">
+            <img id="selfie-img" src="assets/images/eu.jpg" alt="Imagem do criador dessa maravilhosa página web">
             <figcaption>Uma selfie minha</figcaption>
         </figure>
         <article>
@@ -33,6 +45,10 @@
     <section class="window" id="curiosidades">
         <div class="window-heading">
             <h2>Curiosidades</h2>
+            <div class="window-icons">
+                <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                <img class="window-icon" src="assets/images/close-icon.png" alt="">
+            </div>
         </div>
         <ol>
             <li>Aprendi a tocar violão por causa de The Last Of Us II</li>
@@ -45,6 +61,10 @@
     <section class="window" id="educacao">
         <div class="window-heading">
             <h2>Educação</h2>
+            <div class="window-icons">
+                <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                <img class="window-icon" src="assets/images/close-icon.png" alt="">
+            </div>
         </div>
         <table>
             <thead>
@@ -128,6 +148,10 @@
     <section class="window" id="causos">
         <div class="window-heading">
             <h2>Causos</h2>
+            <div class="window-icons">
+                <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                <img class="window-icon" src="assets/images/close-icon.png" alt="">
+            </div>
         </div>
         <article>
             <p>Nas férias de fim de ano de 2022, eu e mais cinco amigos fomos passar uma semana em Zumbi, no último dia todo mundo foi dormir na sala pra assistir um filmezinho de terror bolado, A Entidade. O intuito era que nesse dia diversos filmes fosses assistidos, mas, a pessoa responsável por levar um pendrive com os filmes, acabou deixando em casa, então tivemos que baixar usando a internet da vizinha, na velocidade interestelar de 200Kb/s. O que resultou em algumas partes do filme terem ficado corrompidas.</p>
@@ -137,6 +161,10 @@
     <section class="window" id="habilidades">
         <div class="window-heading">
             <h2>Habilidades</h2>
+            <div class="window-icons">
+                <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                <img class="window-icon" src="assets/images/close-icon.png" alt="">
+            </div>
         </div>
         <ul>
             <li>Programação</li>
