att site pessoal

--- a/sitePessoal/index.html
+++ b/sitePessoal/index.html
@@ -25,6 +25,8 @@
             <h1 id="regular">Pedro</h1><h1>AUGUSTO</h1>
         </div>
     </section>
+    <section id="navbar-background">
+    </section>
     <section class="window" id="sobremim">
         <div class="window-heading">
             <h2>Sobre mim</h2>
@@ -33,30 +35,92 @@
                 <img class="window-icon" src="assets/images/close-icon.png" alt="">
             </div>
         </div>
-        <figure>
-            <img id="selfie-img" src="assets/images/eu.jpg" alt="Imagem do criador dessa maravilhosa página web">
-            <figcaption>Uma selfie minha</figcaption>
-        </figure>
-        <article>
-            <p>Moro na cidade de Ceará-Mirim desde quando eu nasci, tenho 17 anos e atualmente estou cursando o ensino médio no IFRN - Campus Ceará-Mirim, no curso de técnico de informática. Sou apaixonado por programação e começei a ter interesse pela programação competitiva depois de ter ido bem na primeira fase da OBI de 2023. Curto ler livros de filosofia e história, amo tocar violão nas horas vagas (embora tenha um tempinho considerável desde que sequer tenha movido ele de lugar... #vidadefederal). Meu tipo de jogo favorito são atiradores em primeira pessoa, sendo que o melhor que já joguei na vida foi Halo 3 de Xbox 360, e nenhum outro chegou perto de me trazer o nível de alegria que senti jogando aquela obra de arte...</p>
-            <p>Atualmente estou aprendendo C++, por ser uma linguagem extremamente utilizada na parte competitiva da programação, e está sendo uma experiência bacana, gosto da sintaxe e de como a estrutura da linguagem se encaixa bem na minha forma particular de programar e resolver problemas. Espero que meus esforços tragam bons resultados na segunda fase da OBI daqui a uns meses. =D</p>
-        </article>
-    </section>
-    <section class="window" id="curiosidades">
-        <div class="window-heading">
-            <h2>Curiosidades</h2>
-            <div class="window-icons">
-                <img class="window-icon" src="assets/images/question-icon.png" alt="">
-                <img class="window-icon" src="assets/images/close-icon.png" alt="">
-            </div>
+        <div class="window-content">
+            <figure>
+                <img class="outset-border" id="selfie-img" src="assets/images/eu.jpg" alt="Imagem do criador dessa maravilhosa página web">
+            </figure>
+            <article>
+                <p>Moro na cidade de Ceará-Mirim desde quando eu nasci, tenho 17 anos e atualmente estou cursando o ensino médio no IFRN - Campus Ceará-Mirim, no curso de técnico de informática. Sou apaixonado por programação e começei a ter interesse pela programação competitiva depois de ter ido bem na primeira fase da OBI de 2023. Curto ler livros de filosofia e história, amo tocar violão nas horas vagas (embora tenha um tempinho considerável desde que sequer tenha movido ele de lugar... #vidadefederal). Meu tipo de jogo favorito são atiradores em primeira pessoa, sendo que o melhor que já joguei na vida foi Halo 3 de Xbox 360, e nenhum outro chegou perto de me trazer o nível de alegria que senti jogando aquela obra de arte...</p>
+                <p>Atualmente estou aprendendo C++, por ser uma linguagem extremamente utilizada na parte competitiva da programação, e está sendo uma experiência bacana, gosto da sintaxe e de como a estrutura da linguagem se encaixa bem na minha forma particular de programar e resolver problemas. Espero que meus esforços tragam bons resultados na segunda fase da OBI daqui a uns meses. =D</p>
+            </article>
         </div>
-        <ol>
-            <li>Aprendi a tocar violão por causa de The Last Of Us II</li>
-            <li>Meu filme favorito é Bladerunner 2049</li>
-            <li>Nunca quis ser astronauta, paleontólogo, jogador de futebol ou cantor/dançarino</li>
-            <li>Sou extremamente competitivo</li>
-            <li>Entre gato e cachorro, eu prefiro ter um pato</li>
-        </ol>
+    </section>
+    <section id="curiosidades">
+        <section class="window card"  >
+            <div class="window-heading">
+                <h2>Curiosidades</h2>
+                <div class="window-icons">
+                    <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                    <img class="window-icon" src="assets/images/close-icon.png" alt="">
+                </div>
+            </div>
+            <div class="window-content">
+                <figure class="card-figure">
+                    <img class="outset-border" src="assets/images/TLOU.jpg" alt="">
+                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                </figure>
+            </div>
+        </section>
+        <section class="window card">
+            <div class="window-heading">
+                <h2>Curiosidades</h2>
+                <div class="window-icons">
+                    <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                    <img class="window-icon" src="assets/images/close-icon.png" alt="">
+                </div>
+            </div>
+            <div class="window-content">
+                <figure class="card-figure">
+                    <img class="outset-border" src="assets/images/bladerunner2049.jpg" alt="">
+                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                </figure>
+            </div>
+        </section>
+        <section class="window card"  >
+            <div class="window-heading">
+                <h2>Curiosidades</h2>
+                <div class="window-icons">
+                    <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                    <img class="window-icon" src="assets/images/close-icon.png" alt="">
+                </div>
+            </div>
+            <div class="window-content">
+                <figure class="card-figure">
+                    <img class="outset-border" src="assets/images/astronauta.jpg" alt="">
+                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                </figure>
+            </div>
+        </section>
+        <section class="window card"  >
+            <div class="window-heading">
+                <h2>Curiosidades</h2>
+                <div class="window-icons">
+                    <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                    <img class="window-icon" src="assets/images/close-icon.png" alt="">
+                </div>
+            </div>
+            <div class="window-content">
+                <figure class="card-figure">
+                    <img class="outset-border" src="assets/images/competitivo.jpg" alt="">
+                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                </figure>
+            </div>
+        </section>
+        <section class="window card"  >
+            <div class="window-heading">
+                <h2>Curiosidades</h2>
+                <div class="window-icons">
+                    <img class="window-icon" src="assets/images/question-icon.png" alt="">
+                    <img class="window-icon" src="assets/images/close-icon.png" alt="">
+                </div>
+            </div>
+            <div class="window-content">
+                <figure class="card-figure">
+                    <img class="outset-border" src="assets/images/pato.jpg" alt="">
+                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                </figure>
+            </div>
+        </section>
     </section>
     <section class="window" id="educacao">
         <div class="window-heading">
