att site pessoal

--- a/sitePessoal/index.html
+++ b/sitePessoal/index.html
@@ -48,7 +48,7 @@
     <section id="curiosidades">
         <section class="window card"  >
             <div class="window-heading">
-                <h2>Curiosidades</h2>
+                <h2>Curiosidade 1</h2>
                 <div class="window-icons">
                     <img class="window-icon" src="assets/images/question-icon.png" alt="">
                     <img class="window-icon" src="assets/images/close-icon.png" alt="">
@@ -63,7 +63,7 @@
         </section>
         <section class="window card">
             <div class="window-heading">
-                <h2>Curiosidades</h2>
+                <h2>Curiosidades 2</h2>
                 <div class="window-icons">
                     <img class="window-icon" src="assets/images/question-icon.png" alt="">
                     <img class="window-icon" src="assets/images/close-icon.png" alt="">
@@ -72,13 +72,13 @@
             <div class="window-content">
                 <figure class="card-figure">
                     <img class="outset-border" src="assets/images/bladerunner2049.jpg" alt="">
-                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                    <figcaption>Meu filme favorito é Bladerunner 2049</figcaption>
                 </figure>
             </div>
         </section>
         <section class="window card"  >
             <div class="window-heading">
-                <h2>Curiosidades</h2>
+                <h2>Curiosidades 3</h2>
                 <div class="window-icons">
                     <img class="window-icon" src="assets/images/question-icon.png" alt="">
                     <img class="window-icon" src="assets/images/close-icon.png" alt="">
@@ -87,13 +87,13 @@
             <div class="window-content">
                 <figure class="card-figure">
                     <img class="outset-border" src="assets/images/astronauta.jpg" alt="">
-                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                    <figcaption>Quando criança, nunca tive vontade de ser astronauta, jogador de futebol, músico, paleontólogo ou cantor</figcaption>
                 </figure>
             </div>
         </section>
         <section class="window card"  >
             <div class="window-heading">
-                <h2>Curiosidades</h2>
+                <h2>Curiosidades 4</h2>
                 <div class="window-icons">
                     <img class="window-icon" src="assets/images/question-icon.png" alt="">
                     <img class="window-icon" src="assets/images/close-icon.png" alt="">
@@ -102,13 +102,13 @@
             <div class="window-content">
                 <figure class="card-figure">
                     <img class="outset-border" src="assets/images/competitivo.jpg" alt="">
-                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                    <figcaption>Eu sou apaixonado por programação competitiva</figcaption>
                 </figure>
             </div>
         </section>
         <section class="window card"  >
             <div class="window-heading">
-                <h2>Curiosidades</h2>
+                <h2>Curiosidades 5</h2>
                 <div class="window-icons">
                     <img class="window-icon" src="assets/images/question-icon.png" alt="">
                     <img class="window-icon" src="assets/images/close-icon.png" alt="">
@@ -117,7 +117,7 @@
             <div class="window-content">
                 <figure class="card-figure">
                     <img class="outset-border" src="assets/images/pato.jpg" alt="">
-                    <figcaption>Aprendi a tocar violão por causa de The Last of Us II</figcaption>
+                    <figcaption>Meu sonho é ter um pato</figcaption>
                 </figure>
             </div>
         </section>
@@ -217,10 +217,12 @@
                 <img class="window-icon" src="assets/images/close-icon.png" alt="">
             </div>
         </div>
-        <article>
-            <p>Nas férias de fim de ano de 2022, eu e mais cinco amigos fomos passar uma semana em Zumbi, no último dia todo mundo foi dormir na sala pra assistir um filmezinho de terror bolado, A Entidade. O intuito era que nesse dia diversos filmes fosses assistidos, mas, a pessoa responsável por levar um pendrive com os filmes, acabou deixando em casa, então tivemos que baixar usando a internet da vizinha, na velocidade interestelar de 200Kb/s. O que resultou em algumas partes do filme terem ficado corrompidas.</p>
-            <p>Fomos assistir mesmo assim... Filme vai, filme vem, susto aqui, susto ali... Chega uma parte do filme em que ta todo mundo tenso, personagem principal indo pra cima do perigo como todo bom protagonista de filme de terror, até que travou. Me aproximei do notebook que a gente tava usando pra passar o filme, pulei alguns segundos do filme tranquilamente, e me deparo com um frame em que o literal rosto do diabo estava 100% enquadrado e a 30cm do meu rosto, dei um pulo pra trás e soltei um grito muito alto as 23h da noite... Bons tempos.</p>
-        </article>
+        <div class="window-content">
+            <article>
+                <p>Nas férias de fim de ano de 2022, eu e mais cinco amigos fomos passar uma semana em Zumbi, no último dia todo mundo foi dormir na sala pra assistir um filmezinho de terror bolado, A Entidade. O intuito era que nesse dia diversos filmes fosses assistidos, mas, a pessoa responsável por levar um pendrive com os filmes, acabou deixando em casa, então tivemos que baixar usando a internet da vizinha, na velocidade interestelar de 200Kb/s. O que resultou em algumas partes do filme terem ficado corrompidas.</p>
+                <p>Fomos assistir mesmo assim... Filme vai, filme vem, susto aqui, susto ali... Chega uma parte do filme em que ta todo mundo tenso, personagem principal indo pra cima do perigo como todo bom protagonista de filme de terror, até que travou. Me aproximei do notebook que a gente tava usando pra passar o filme, pulei alguns segundos do filme tranquilamente, e me deparo com um frame em que o literal rosto do diabo estava 100% enquadrado e a 30cm do meu rosto, dei um pulo pra trás e soltei um grito muito alto as 23h da noite... Bons tempos.</p>
+            </article>
+        </div>
     </section>
     <section class="window" id="habilidades">
         <div class="window-heading">
@@ -230,12 +232,12 @@
                 <img class="window-icon" src="assets/images/close-icon.png" alt="">
             </div>
         </div>
-        <ul>
-            <li>Programação</li>
-            <li>Resolução de problemas</li>
-            <li>Matemática</li>
-            <li>Trabalhar sob pressão</li>
-        </ul>
+        <div class="window-content">
+            <div class="icon-container"><img class="icon" src="assets/images/console_prompt-0.png" alt=""><span>Programação</span></div>
+            <div class="icon-container"><img class="icon" src="assets/images/check-0.png" alt=""><span>Resoluçao de problemas</span></div>
+            <div class="icon-container"><img class="icon" src="assets/images/chart1-5.png" alt=""><span>Matemática</span></div>
+            <div class="icon-container"><img class="icon" src="assets/images/clock-1.png" alt=""><span>Trabalhar sob pressão</span></div>
+        </div>
     </section>
 </main>
 <footer>
@@ -246,7 +248,7 @@
         </a>
     </div>
     <nav id="contato">
-        <span><i class="fa-regular fa-envelope"></i>pedro.augusto1@escolar.ifrn.edu.br</span>
+        <span><a href="mailto:pedro.augusto1@escolar.ifrn.edu.br"><i class="fa-regular fa-envelope"></i>pedro.augusto1@escolar.ifrn.edu.br</a></span>
         <span><a href="https://www.instagram.com/__pedroaug/"><i class="fa-brands fa-instagram"></i>@__pedroaug</a></span>
         <span><a href="https://github.com/PedroAug91/"><i class="fa-brands fa-github"></i>pedroaug91</a></span>
     </nav>
